<resources>
    <string name="app_name">WhutChat</string>

    <!-- login登陆界面用到的一些string -->
    <string name="title_activity_login">用户登陆</string>
    <string name="login_prompt_email">教务处学号</string>
    <string name="login_prompt_password">登陆密码</string>
    <string name="login_action_sign_in">登陆</string>
    <string name="login_action_sign_in_short">用户登陆</string>
    <string name="login_action_user_create">注册账号</string>
    <string name="login_error_invalid_email">学号不正确</string>
    <string name="login_error_invalid_password">输入的密码太短了</string>
    <string name="login_error_incorrect_password">密码或者账户名不正确</string>
    <string name="login_error_field_required">此项必须填写</string>
    <string name="login_permission_rationale">"Contacts permissions are needed for providing email completions."</string>

    <!-- 注册账号界面的文字 -->
    <string name="title_create_user">用户注册</string>
    <string name="create_user_string_name">教务处学号</string>
    <string name="create_user_string_password_one">设置密码</string>
    <string name="create_user_string_password_two">确认密码</string>
    <string name="create_user_string_nickname">昵称</string>
    <string name="create_user_string_register">注册用户</string>
    <string name="create_user_string_exit">放弃注册退出</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--app主界面-->


</resources>
